--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <div>
         <h1>НОВАЯ ФРАЗА</h1>
         <p>Новый текст в ветке 24-issue</p>
+        <p>New conflict
+        </p>
+        <p>
+            New conflict
+        </p>
     </div>
     
 </body>
