--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div>
         <h1>НОВАЯ ФРАЗА</h1>
         <p>Новый текст в ветке 24-issue</p>
+        <p>Создаем конфликт</p>
+        <p>Создаем конфликт</p>
+        <p>Создаем конфликт</p>
     </div>
     
 </body>
